--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "tsc"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
+    "lucide-react": "^0.575.0",
+    "motion": "^12.34.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "@google/genai": "^1.41.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
